@@ -23,7 +23,50 @@
 #include "Rcppsupport.h"
 
 namespace rprotobuf{
-	
+
+SEXP kInt64AsStringOptionName = Rf_install("int64AsString");
+
+// Rcpp::wrap silently coerces 64-bit integers to numerics
+// which drop precision for values between 2^53 - 2^64.
+// So, if an option is set, we return as a character string.
+// TODO(mstokely): Do more of this in Rcpp.
+SEXP PreciseRInt64Type(int64 val) {
+	if (Rf_asLogical(Rf_GetOption1(kInt64AsStringOptionName))) {
+		std::stringstream ss;
+		if ((ss << val).fail()) {
+			// This should not happen, its a bug in the code.
+			throwException(
+				"Error converting int64 to STRSXP, unset int64AsString option.",
+				"ConversionException");
+		}
+		// Rcpp::wrap of the string returns vector of single characters.
+		// So we must create this vector first to wrap.
+		std::vector<string> retlist;
+		retlist.push_back(ss.str());
+		return Rcpp::wrap(retlist);
+	} else {
+		return Rcpp::wrap(val);
+	}
+}
+
+SEXP PreciseRUInt64Type(uint64 val) {
+	if (Rf_asLogical(Rf_GetOption1(kInt64AsStringOptionName))) {
+		std::stringstream ss;
+		if ((ss << val).fail()) {
+			// This should not happen, its a bug in the code.
+			throwException(
+				"Error converting uint64 to STRSXP, unset int64AsString option.",
+				"ConversionException");
+		}
+		// Wrap the string version of this int64.
+		std::vector<string> retlist;
+		retlist.push_back(ss.str());
+		return Rcpp::wrap(retlist);
+	} else {
+		return Rcpp::wrap(val);
+	}
+}
+
 /**
  * extract a field from a message
  *
@@ -71,15 +114,33 @@ SEXP extractFieldAsSEXP( const Rcpp::XPtr<GPB::Message>& message,
 
 			HANDLE_REPEATED_FIELD(CPPTYPE_INT32, GPB::int32) ;
     		HANDLE_REPEATED_FIELD(CPPTYPE_UINT32, GPB::uint32) ;
-#ifdef RCPP_HAS_LONG_LONG_TYPES
-    		HANDLE_REPEATED_FIELD(CPPTYPE_INT64, GPB::int64) ;
-    		HANDLE_REPEATED_FIELD(CPPTYPE_UINT64, GPB::uint64) ;
-#endif
     		HANDLE_REPEATED_FIELD(CPPTYPE_DOUBLE, double) ;
     		HANDLE_REPEATED_FIELD(CPPTYPE_FLOAT, float) ;
     		HANDLE_REPEATED_FIELD(CPPTYPE_BOOL, bool) ;
     		HANDLE_REPEATED_FIELD(CPPTYPE_ENUM, enum_field ) ;
     		HANDLE_REPEATED_FIELD(CPPTYPE_MESSAGE, message_field ) ;
+#ifdef RCPP_HAS_LONG_LONG_TYPES
+            // We can't handle these the same way, because Rcpp::wrap silently
+            // casts int64s to doubles which may cause us to lose precision.
+            case CPPTYPE_INT64:
+                if (Rf_asLogical(Rf_GetOption1(kInt64AsStringOptionName))) {
+                    return Rcpp::wrap(
+                        Int64AsStringRepeatedFieldImporter(ref, *message,
+                                                           fieldDesc));
+                } else {
+                    return Rcpp::wrap(
+                        RepeatedFieldImporter<int64>(ref, *message, fieldDesc));
+                }
+            case CPPTYPE_UINT64:
+                if (Rf_asLogical(Rf_GetOption1(kInt64AsStringOptionName))) {
+                    return Rcpp::wrap(
+                        UInt64AsStringRepeatedFieldImporter(ref, *message,
+                                                            fieldDesc));
+                } else {
+                    return Rcpp::wrap(
+                        RepeatedFieldImporter<uint64>(ref, *message, fieldDesc));
+                }
+#endif
 #undef HANDLE_REPEATED_FIELD
 
 		case CPPTYPE_STRING:
@@ -112,13 +173,17 @@ SEXP extractFieldAsSEXP( const Rcpp::XPtr<GPB::Message>& message,
 
 		HANDLE_SINGLE_FIELD( CPPTYPE_INT32,  Int32 ); 
 		HANDLE_SINGLE_FIELD( CPPTYPE_UINT32, UInt32 ); 
-#ifdef RCPP_HAS_LONG_LONG_TYPES
-		HANDLE_SINGLE_FIELD( CPPTYPE_INT64,  Int64 );
-		HANDLE_SINGLE_FIELD( CPPTYPE_UINT64, UInt64 );
-#endif
 		HANDLE_SINGLE_FIELD( CPPTYPE_DOUBLE, Double );
 		HANDLE_SINGLE_FIELD( CPPTYPE_FLOAT, Float );
 		HANDLE_SINGLE_FIELD( CPPTYPE_BOOL, Bool );
+#ifdef RCPP_HAS_LONG_LONG_TYPES
+        // Handle these types separately since Rcpp::wrap doesn't
+        // do the right thing.
+        case CPPTYPE_INT64:
+            return PreciseRInt64Type(ref->GetInt64(*message, fieldDesc));
+        case CPPTYPE_UINT64:
+            return PreciseRUInt64Type(ref->GetUInt64(*message, fieldDesc));
+#endif
 #undef HANDLE_SINGLE_FIELD
 
 		case CPPTYPE_STRING:
@@ -146,4 +211,3 @@ SEXP extractFieldAsSEXP( const Rcpp::XPtr<GPB::Message>& message,
 }
 
 } // namespace rprotobuf
-
